ARCPOC-277: - Ensure the error message is clear and relevant.